@@ -538,7 +538,6 @@ class ModelSQL(ModelStorage):
         cursor = transaction.connection.cursor()
         pool = Pool()
         Translation = pool.get('ir.translation')
-        Rule = pool.get('ir.rule')
 
         super(ModelSQL, cls).create(vlist)
 
@@ -608,21 +607,6 @@ class ModelSQL(ModelStorage):
                         exception, values, transaction=transaction)
                 raise
 
-        domain = Rule.domain_get(cls.__name__, mode='create')
-        if domain:
-            tables = {None: (table, None)}
-            tables, expression = cls.search_domain(
-                domain, active_test=False, tables=tables)
-            from_ = convert_from(None, tables)
-            for sub_ids in grouped_slice(new_ids):
-                sub_ids = list(sub_ids)
-                red_sql = reduce_ids(table.id, sub_ids)
-
-                cursor.execute(*from_.select(table.id,
-                        where=red_sql & expression))
-                if len(cursor.fetchall()) != len(sub_ids):
-                    cls.raise_user_error('access_error', cls.__name__)
-
         transaction.create_records.setdefault(cls.__name__,
             set()).update(new_ids)
 
@@ -660,6 +644,7 @@ class ModelSQL(ModelStorage):
         field_names = cls._fields.keys()
         cls._update_mptt(field_names, [new_ids] * len(field_names))
 
+        cls.__check_domain_rule(new_ids, 'create')
         records = cls.browse(new_ids)
         for sub_records in grouped_slice(records, cache_size()):
             cls._validate(sub_records)
@@ -929,7 +914,6 @@ class ModelSQL(ModelStorage):
         pool = Pool()
         Translation = pool.get('ir.translation')
         Config = pool.get('ir.configuration')
-        Rule = pool.get('ir.rule')
 
         assert not len(args) % 2
         # Remove possible duplicates from all records
@@ -946,6 +930,7 @@ class ModelSQL(ModelStorage):
         table = cls.__table__()
 
         cls.__check_timestamp(all_ids)
+        cls.__check_domain_rule(all_ids, 'write', nodomain='write_error')
 
         fields_to_set = {}
         actions = iter((records, values) + args)
@@ -970,31 +955,8 @@ class ModelSQL(ModelStorage):
                         columns.append(Column(table, fname))
                         update_values.append(field.sql_format(value))
 
-            domain = Rule.domain_get(cls.__name__, mode='write')
-            tables = {None: (table, None)}
-            if domain:
-                tables, dom_exp = cls.search_domain(
-                    domain, active_test=False, tables=tables)
-            from_ = convert_from(None, tables)
             for sub_ids in grouped_slice(ids):
-                sub_ids = list(sub_ids)
                 red_sql = reduce_ids(table.id, sub_ids)
-                where = red_sql
-                if domain:
-                    where &= dom_exp
-                cursor.execute(*from_.select(table.id, where=where))
-                rowcount = cursor.rowcount
-                if rowcount == -1 or rowcount is None:
-                    rowcount = len(cursor.fetchall())
-                if not rowcount == len({}.fromkeys(sub_ids)):
-                    if domain:
-                        cursor.execute(*table.select(table.id, where=red_sql))
-                        rowcount = cursor.rowcount
-                        if rowcount == -1 or rowcount is None:
-                            rowcount = len(cursor.fetchall())
-                        if rowcount == len({}.fromkeys(sub_ids)):
-                            cls.raise_user_error('access_error', cls.__name__)
-                    cls.raise_user_error('write_error', cls.__name__)
                 try:
                     cursor.execute(*table.update(columns, update_values,
                             where=red_sql))
@@ -1027,8 +989,11 @@ class ModelSQL(ModelStorage):
             field.set(cls, fname, *fargs)
 
         cls._insert_history(all_ids)
+
+        cls.__check_domain_rule(all_ids, 'write')
         for sub_records in grouped_slice(all_records, cache_size()):
             cls._validate(sub_records, field_names=all_field_names)
+
         cls.trigger_write(trigger_eligibles)
 
     @classmethod
@@ -1039,7 +1004,6 @@ class ModelSQL(ModelStorage):
         cursor = transaction.connection.cursor()
         pool = Pool()
         Translation = pool.get('ir.translation')
-        Rule = pool.get('ir.rule')
         ids = map(int, records)
 
         if not ids:
@@ -1054,6 +1018,7 @@ class ModelSQL(ModelStorage):
                     ids.remove(del_id)
 
         cls.__check_timestamp(ids)
+        cls.__check_domain_rule(ids, 'delete')
 
         has_translation = False
         tree_ids = {}
@@ -1092,25 +1057,6 @@ class ModelSQL(ModelStorage):
                         foreign_keys_tocheck.append((model, field_name))
 
         transaction.delete.setdefault(cls.__name__, set()).update(ids)
-
-        domain = Rule.domain_get(cls.__name__, mode='delete')
-
-        if domain:
-            tables = {None: (table, None)}
-            tables, dom_exp = cls.search_domain(
-                domain, active_test=False, tables=tables)
-            from_ = convert_from(None, tables)
-            for sub_ids in grouped_slice(ids):
-                sub_ids = list(sub_ids)
-                red_sql = reduce_ids(table.id, sub_ids)
-                cursor.execute(*from_.select(table.id,
-                        where=red_sql & dom_exp))
-                rowcount = cursor.rowcount
-                if rowcount == -1 or rowcount is None:
-                    rowcount = len(cursor.fetchall())
-                if not rowcount == len({}.fromkeys(sub_ids)):
-                    cls.raise_user_error('access_error', cls.__name__)
-
         cls.trigger_delete(records)
 
         def get_related_records(Model, field_name, sub_ids):
@@ -1178,6 +1124,35 @@ class ModelSQL(ModelStorage):
         cls._insert_history(ids, deleted=True)
 
         cls._update_mptt(tree_ids.keys(), tree_ids.values())
+
+    @classmethod
+    def __check_domain_rule(cls, ids, mode, nodomain=None):
+        pool = Pool()
+        Rule = pool.get('ir.rule')
+        table = cls.__table__()
+        cursor = Transaction().connection.cursor()
+
+        domain = Rule.domain_get(cls.__name__, mode=mode)
+        tables = {None: (table, None)}
+        if domain or nodomain:
+            if domain:
+                tables, dom_exp = cls.search_domain(
+                    domain, active_test=False, tables=tables)
+            from_ = convert_from(None, tables)
+            for sub_ids in grouped_slice(ids):
+                sub_ids = list(set(sub_ids))
+                where = reduce_ids(table.id, sub_ids)
+                if domain:
+                    where &= dom_exp
+                cursor.execute(*from_.select(table.id, where=where))
+                rowcount = cursor.rowcount
+                if rowcount == -1 or rowcount is None:
+                    rowcount = len(cursor.fetchall())
+                if rowcount != len(sub_ids):
+                    if domain:
+                        cls.raise_user_error('access_error', cls.__name__)
+                    else:
+                        cls.raise_user_error(nodomain, cls.__name__)
 
     @classmethod
     def search(cls, domain, offset=0, limit=None, order=None, count=False,
